load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lock_lib",
    srcs = ["main.go"],
    importpath = "github.com/matsubara0507/go-etcd-sandbox/lock",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "lock",
    embed = [":lock_lib"],
    visibility = ["//visibility:public"],
)
