load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lock",
    srcs = ["user.go"],
    importpath = "github.com/matsubara0507/go-etcd-sandbox/lock",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/pkg/errors",
        "//vendor/go.etcd.io/etcd/client/v3:client",
        "//vendor/go.etcd.io/etcd/client/v3/concurrency",
        "//vendor/gopkg.in/yaml.v2:yaml_v2",
    ],
)

go_test(
    name = "lock_test",
    srcs = ["user_test.go"],
    embed = [":lock"],
    deps = [
        "//vendor/github.com/pkg/errors",
        "//vendor/go.etcd.io/etcd/server/v3/embed",
        "//vendor/go.etcd.io/etcd/server/v3/etcdserver",
    ],
)
